[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Grids/menu_4x4_01.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/menu_boxes_P8_450x250.png" type="Texture" id=2]

[node name="Menu_4x4_01" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite01" type="Sprite" parent="."]
position = Vector2( -677, -377 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite02" type="Sprite" parent="."]
position = Vector2( -226, -377 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite03" type="Sprite" parent="."]
position = Vector2( 226, -377 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite04" type="Sprite" parent="."]
position = Vector2( 677, -377 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite05" type="Sprite" parent="."]
position = Vector2( -677, -126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite06" type="Sprite" parent="."]
position = Vector2( -226, -126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite07" type="Sprite" parent="."]
position = Vector2( 226, -126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite08" type="Sprite" parent="."]
position = Vector2( 677, -126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite09" type="Sprite" parent="."]
position = Vector2( -677, 126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite10" type="Sprite" parent="."]
position = Vector2( -226, 126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite11" type="Sprite" parent="."]
position = Vector2( 226, 126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite12" type="Sprite" parent="."]
position = Vector2( 677, 126 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite13" type="Sprite" parent="."]
position = Vector2( -677, 378 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite14" type="Sprite" parent="."]
position = Vector2( -226, 378 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite15" type="Sprite" parent="."]
position = Vector2( 226, 378 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite16" type="Sprite" parent="."]
position = Vector2( 677, 378 )
texture = ExtResource( 2 )
hframes = 12
frame = 10
__meta__ = {
"_edit_lock_": true
}

